test_src/compiler_errors/types/arithmetic/DivideBoolError1.b
class DivideBoolError1 {
    void test() {
        println(true / 1);
    }
}
